# ace-WebUI

./: .gitignore  Cargo.toml  LICENSE  README.md  icons.txt  index.html  index.js  package-lock.json  package.json  style.css
.github/workflows/: main.yml
Ace-Editor-Vue/: package-lock.json  package.json
alpineport/: index.html  index.js  package-lock.json  package.json  settingsmenutemplate.html  style.css  vite.config.ts
alpineport/public/: kicanvas.js  preview.html
alpineport/public/ace/: ext-settings_menu.js  ext-statusbar.js  worker-yaml.js
alpineport/src/: index.js  preview.html  style.css  terminal.js
backend/: Cargo.toml
backend/src/: main.rs
src/: main.rs
web/: index.html  index.js  main.go  style.css
web/files/: test.js
web/public/: demo.kicad_sch  kikad-demo.kicad_sch  preview.html
web/src/: index.js  terminal.js
