# Cargo.toml
[package]
name = "ace-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
tower-http = { version = "0.5", features = ["fs"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
mime_guess = "2"